--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,6 @@
 services:
   web:
-    image: ghcr.io/the-broke-sommeliers/wine-cellar-web:latest
+    build: .
     command: gunicorn wine_cellar.conf.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - static_volume:/home/app/web/staticfiles
@@ -30,7 +30,7 @@ services:
     image: caddy:latest
     restart: unless-stopped
     ports:
-      - 127.0.0.1:8085:80
+      - 80:80
     volumes:
       - ./caddy:/etc/caddy/
       - static_volume:/srv/static
@@ -42,7 +42,7 @@ services:
   redis:
     image: redis:alpine
   celery:
-    image: ghcr.io/the-broke-sommeliers/wine-cellar-web:latest
+    build: .
     command: celery -A wine_cellar.conf worker -l info
     env_file:
       - ./.env.prod
@@ -52,7 +52,7 @@ services:
       redis:
         condition: service_started
   celery-beat:
-    image: ghcr.io/the-broke-sommeliers/wine-cellar-web:latest
+    build: .
     command: celery -A wine_cellar.conf beat -l info
     env_file:
       - ./.env.prod
